# fx-quotes-

./: .coverage  .gitignore  Dockerfile  README.md  agent.md  celerybeat-schedule  compose.yml  main.py  pyproject.toml  run.sh
app/: celery.py  middleware.py  models.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  viewsets.py
app/fixtures/: currencies.json
app/migrations/: 0001_initial.py  0002_rename_qoute_quote.py  0003_transaction_unique_transaction_quote_amount.py  0004_quote_rate.py  0005_remove_transaction_state.py  0006_quote_converted_amount.py  0007_alter_rate_options_rate_update_timestamp.py
app/tests/: test_currency_utils.py  test_currency_viewset.py  test_health.py  test_quote_viewset.py  test_rate_viewset.py  test_tasks.py  test_transaction_viewset.py
